Fix issue with Linux guest XHCI	tablet probing.

The USB3 spec mandates that the	device-descriptor max packet size
be 512 bytes, which requires a field size of 9 since it	is a
power-of-2.

Linux kernels recently started validating this field, resulting	in
the table not being probed and the cursor not working in bhyve VNC.

PR:		275760

(cherry picked from commit 0c243cd4a3671bf728f33378ac593c08d8367bc2)